--- a/src/app/modules/wallet/components/tokens/polygon/bridge/bridge.component.html
+++ b/src/app/modules/wallet/components/tokens/polygon/bridge/bridge.component.html
@@ -3,11 +3,11 @@
   <div class="m-polygon__inputAmountContainer">
     <div class="m-polygon__row">
       <img
-        [src]="currentNetwork.logoPath"
+        [src]="fromNetwork.logoPath"
         alt="polygon"
         class="m-polygon__chainLogo"
       />
-      {{ currentNetwork.networkName }} chain
+      {{ fromNetwork.networkName }} chain
       <div class="m-polygon__grow"></div>
       <span class="m-polygon__balance-placeholder">Balance: </span>
       <span class="m-polygon__balance">
@@ -49,17 +49,17 @@
 
   <div class="m-polygon__button-container">
     <m-button
-      [hidden]="currentNetwork.networkName !== MAINNET_NETWORK.networkName"
+      [hidden]="fromNetwork.networkName !== MAINNET_NETWORK.networkName"
       color="primary"
       (onAction)="approve()"
-      [disabled]="!needsApproval"
+      [disabled]="!needsApproval || !validNetwork"
     >
       Approve
     </m-button>
     <m-button
       color="primary"
-      (onAction)="withdraw()"
-      [disabled]="amount === '0' || needsApproval"
+      (onAction)="transfer()"
+      [disabled]="amount === '0' || needsApproval || !validNetwork"
     >
       Transfer
     </m-button>
