Use new material icons on new nav

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -412,7 +412,7 @@
               [useParentPosition]="true"
             >
               <m-icon
-                iconId="groups"
+                iconId="group"
                 [sizeFactor]="nav2021Feature ? 8 : 35"
                 m-tooltip--icon
               ></m-icon>
