--- a/src/app/modules/composer/composer.component.scss
+++ b/src/app/modules/composer/composer.component.scss
@@ -4,7 +4,7 @@ m-composer {
   z-index: 0;
 
   display: block;
-  margin-bottom: 16px;
+  margin-bottom: $minds-padding * 3;
   // padding: 29px 0 34px;
   border-radius: 4px;
   box-sizing: border-box;
