--- a/src/app/modules/newsfeed/feeds/top-feed/top-feed.component.html
+++ b/src/app/modules/newsfeed/feeds/top-feed/top-feed.component.html
@@ -34,6 +34,6 @@
     i18n="@@MINDS__NEWSFEED__TOP_FEED__SHOW_MORE"
     class="m-topFeed__showMore__link"
     (click)="loadNext()"
-    >Show more popular posts</a
+    >See more top posts</a
   >
 </div>
