add emoji picker

--- a/src/app/modules/composer/components/text-area/text-area.component.html
+++ b/src/app/modules/composer/components/text-area/text-area.component.html
@@ -41,6 +41,8 @@
       [disabled]="isPosting$ | async"
       (ngModelChange)="onMessageChange($event)"
       (filePaste)="filePaste.emit($event)"
+      (click)="setSelection(messageInput)"
+      (keyup)="setSelection(messageInput)"
       m-attachment-paste
       tabindex="0"
       data-cy="composer-textarea"
