--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -4,6 +4,8 @@
   [class.m-composer__toolbar--small]="isCompactMode$ | async"
   #toolbarWrapper
 >
+  <m-emojiPicker (emojiSelect)="onEmoji($event)"></m-emojiPicker>
+
   <m-file-upload
     [wrapperClass]="[
       'm-composerToolbar__item',
