add cursor support to comments and fix selection after emoji insertion

--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -29,7 +29,8 @@
             (ascendingInProgress || descendingInProgress) &&
             attachment.hasFile()
           "
-          (keyup)="getPostPreview(content)"
+          (keyup)="keyup($event)"
+          (click)="updateCaretPosition()"
           (keypress)="keypress($event)"
           (keydown)="keydown($event)"
           [placeholder]="
