remove option on mobile

--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
   [class.m-composer__toolbar--small]="isCompactMode$ | async"
   #toolbarWrapper
 >
-  <m-emojiPicker (emojiSelect)="onEmoji($event)"></m-emojiPicker>
+  <m-emojiPicker *ngIf="!isMobile()" (emojiSelect)="onEmoji($event)"></m-emojiPicker>
 
   <m-file-upload
     [wrapperClass]="[
