--- a/src/app/modules/wallet/components/tokens/polygon/bridge/bridge.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/polygon/bridge/bridge.component.ng.scss
@@ -170,6 +170,11 @@
       font-size: 15px;
       padding: 8px;
     }
+
+    .m-polygon-errorButton {
+      margin-top: 12px;
+      margin-bottom: 6px;
+    }
   }
 
   .m-skale__rechargeWarning,
