(chore): Updated Social Compass copy for banner and modal

--- a/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
+++ b/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
@@ -9,7 +9,7 @@
           >Build your algorithm</span
         >
         <span class="m-compassQuestionnaireBanner__subtitle"
-          >Set your echo chamber preferences</span
+          >The preferences you set will improve your recommendations</span
         >
       </div>
       <div class="m-compassQuestionnaireBanner__buttonWrapper">
