--- a/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
+++ b/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
@@ -4,11 +4,16 @@
 >
   <div class="m-compassQuestionnaireModal__main">
     <span class="m-compassQuestionnaireModal__title">Build your algorithm</span>
-    <span class="m-compassQuestionnaireModal__subtitle"
-      >The preferences you set will improve your recommendations over time as
-      the open source machine learning monkeys evolve. Don't worry, it won't
-      impact your default newsfeed.</span
-    >
+    <span class="m-compassQuestionnaireModal__subtitle">
+      The preferences you set will improve your recommendations over time as the
+      open source machine learning monkeys evolve. Don't worry, it won't impact
+      your default newsfeed.
+      <a
+        href="https://www.minds.com/minds/blog/build-your-algorithm-phase-1-1317916094152839188"
+        target="_blank"
+        >Learn more.</a
+      >
+    </span>
     <!-- TODO: Add more information link  -->
     <m-compassForm></m-compassForm>
   </div>
