apply design feedback
https://gitlab.com/minds/front/-/merge_requests/1741#note_813410231

--- a/src/app/modules/composer/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.scss
@@ -79,6 +79,10 @@
     }
   }
 
+  m-emojiPicker {
+    margin-right: $minds-margin * 2;
+  }
+
   &.m-composer__toolbar--narrow
     .m-composerToolbarItem__icon
     + .m-composerToolbarItem__label {
