--- a/src/app/common/components/emoji-picker/emoji-picker.component.html
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.html
@@ -16,7 +16,8 @@
     [isNative]="true"
     title="Pick your emoji…"
     emoji="point_up"
+    color="#1b85d6"
     [darkMode]="themeService.isDark$ | async"
-    (emojiSelect)="emojiSelectEmitter.emit($event.emoji)"
+    (emojiSelect)="emojiSelect($event)"
   ></emoji-mart>
 </popper-content>
