--- a/src/app/common/components/emoji-picker/emoji-picker.component.scss
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.scss
@@ -2,7 +2,6 @@
 
 m-emojiPicker {
   text-align: left !important;
-  margin-right: $minds-margin;
 
   .emoji-mart-emoji,
   .emoji-mart-emoji span {
@@ -12,12 +11,16 @@ m-emojiPicker {
   .ngxp__container {
     border: none;
     padding: 0;
-    z-index: 1;
+    z-index: 5;
 
     .ngxp__arrow:before {
       @include m-theme() {
         background-color: themed($m-borderColor--primary);
       }
+    }
+
+    .emoji-mart:not(.emoji-mart-dark) {
+      border: none;
     }
   }
 
@@ -46,12 +49,6 @@ m-emojiPicker {
     }
   }
 
-  .emoji-mart-dark .emoji-mart-search-icon svg {
-    @include m-theme() {
-      fill: themed($m-white);
-    }
-  }
-
   .emoji-mart-dark .emoji-mart-category .emoji-mart-emoji:hover:before {
     @include m-theme() {
       background-color: themed($m-bgColor--secondary);
@@ -71,13 +68,41 @@ m-emojiPicker {
       background-color: themed($m-bgColor--secondary);
     }
   }
+
+  .emoji-mart-search input {
+    padding: 5px 25px 5px 10px;
+  }
+
+  .emoji-mart-search-icon {
+    top: 6px;
+  }
+
+  .emoji-mart-preview {
+    height: 50px;
+
+    .emoji-mart-title-label {
+      font-size: 16px;
+    }
+
+    .emoji-mart-preview-emoji .emoji-mart-emoji > span {
+      font-size: 30px !important;
+    }
+
+    .emoji-mart-preview-shortname {
+      display: none;
+    }
+  }
 }
 
 .m-emojiPicker__icon {
-  padding-right: $minds-padding;
   cursor: pointer;
+  transition: opacity 0.3s;
 
   @include m-theme() {
     color: themed($m-textColor--secondary);
+  }
+
+  &:hover {
+    opacity: 0.7;
   }
 }
