--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -49,7 +49,7 @@
 
   .m-commentPoster__form {
     flex-grow: 2;
-    max-width: calc(100% - 130px);
+    max-width: calc(100% - 160px);
     margin-block-end: 0;
     minds-textarea {
       padding: 0;
@@ -86,7 +86,8 @@
       margin: 3px 10px 0;
     }
     .m-dropdown--v2 {
-      margin: 0;
+      margin: 0 $minds-margin;
+
       .m-commentPoster__menuButton {
         i {
           font-size: 23px;
