--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -103,11 +103,7 @@
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         [routerLinkActiveOptions]="{ exact: plusPageActive }"
       >
-        <a
-          [routerLink]="shouldBeDiscoveryHomepage() ? '/' : '/discovery'"
-          (click)="toggle()"
-          data-ref="sidenav-discovery"
-        >
+        <a routerLink="'/'" (click)="toggle()" data-ref="sidenav-discovery">
           <m-tooltip
             [enabled]="!showLabels"
             [anchor]="'left'"
