--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -11,7 +11,7 @@
     <!-- We place an additional disclaimer here for popover -->
     <m-discovery__disclaimer
       class="m-discovery__disclaimer--popover"
-      *mExperiment="'discovery-homepage'; variation: 'off'"
+      *ngIf="!discoveryOnRegisterExperiment"
     ></m-discovery__disclaimer>
   </div>
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
@@ -22,6 +22,12 @@
           *ngIf="!isPlusPage"
         ></m-language__sidebarPrompt>
         <m-discovery__disclaimer *ngIf="!isPlusPage"></m-discovery__disclaimer>
+        <!-- ojm todo: figure out why this isn't initializing -->
+        <m-suggestions__sidebar
+          *ngIf="discoveryOnRegisterExperiment"
+          type="user"
+          customTitle="popular_channels"
+        ></m-suggestions__sidebar>
         <m-discovery__sidebarTags
           *ngIf="!isPlusPage"
         ></m-discovery__sidebarTags>
