(refactor): support for using growthbook features and to handle restrictions via growthbook ui- minds#2905

--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -28,7 +28,7 @@
 
           <div
             class="m-tabs__tab"
-            *mExperiment="'channel-gallery'; variation: 'on'"
+            *mExperiment="'channel-gallery'; variation: true"
           >
             <a
               [routerLink]="['/', username, '']"
